--- a/config/.env
+++ b/config/.env
@@ -1,3 +1,4 @@
 PORT = 8080
-MONGO_URI = mongodb+srv://unknowndeveloper:unknowndeveloper@cluster0.4plto4p.mongodb.net/arthub?retryWrites=true&w=majority&appName=Cluster0
+# MONGO_URI = mongodb+srv://unknowndeveloper:unknowndeveloper@cluster0.4plto4p.mongodb.net/arthub?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URI = 'mongodb://localhost:27017/Arthub'
 JWT_SECRET = Hey!_this_is_my_secret
