--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.3.5",
     "nodemon": "^3.1.0",
+    "socket.io": "^4.7.5",
     "vercel": "^37.2.1"
   }
 }
